feat(pair01) 12/13 : API 호출 및 rtk기능 구현중

--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
     "type": "module",
     "dependencies": {
         "@hookform/resolvers": "^3.3.2",
+        "@octokit/core": "^5.0.2",
+        "@reduxjs/toolkit": "^2.0.1",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.6.2",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.49.0",
+        "react-query": "^3.39.3",
         "react-redux": "^8.1.3",
         "react-router-dom": "^6.20.1",
         "react-scripts": "5.0.1",
@@ -25,10 +30,8 @@
         "vite_build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon app",
         "postinstall": "husky install"
     },
     "eslintConfig": {
